objects/SMS_Tracking__c.object
<CustomObject>
    <description>Creates a record from Twilio when a client responds to a SMS (text messaging).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS Trackings</relationshipLabel>
        <relationshipName>SMS_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related touch point case.</description>
        <inlineHelpText>The related touch point case.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS Trackings</relationshipLabel>
        <relationshipName>SMS_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <description>First name of the Marketo Lead/Contact associated to lead.</description>
        <label>Client First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <description>Last name of the Marketo Lead/Contact associated to lead.</description>
        <label>Client Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <inlineHelpText>The phone number that was texted.</inlineHelpText>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketo_Email_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Marketo Email Campaign.</description>
        <label>Marketo Email Campaign</label>
        <referenceTo>Marketo_Email_Campaign__c</referenceTo>
        <relationshipLabel>SMS Trackings</relationshipLabel>
        <relationshipName>SMS_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketo_Lead_Id__c</fullName>
        <description>Lead Id from the Marketo associated to the contact/recipient.</description>
        <label>Marketo Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <description>The date/time the client responded to the text.</description>
        <inlineHelpText>The date/time the client responded to the text.</inlineHelpText>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Twilio_Id__c</fullName>
        <externalId>true</externalId>
        <label>Twilio Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Response__c</fullName>
        <description>The response from the client. 'Opt Out' will check the 'SMS Opt Out' field on the Account. 'Unrecognized Response' will trigger an automated reply to try again. The reply will create another SMS Tracking record.</description>
        <inlineHelpText>The response from the client.</inlineHelpText>
        <label>Client Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Opt In</fullName>
                </value>
                <value>
                    <fullName>Unrecognized Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intro_Sent__c</fullName>
        <description>Intro message was/not sent.  The message informs the client about the standard rates may apply when receiving/sending a text.</description>
        <inlineHelpText>Intro message was/not sent.  The message informs the client about the standard rates may apply when receiving/sending a text.</inlineHelpText>
        <label>Intro Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invalid_Phone_Number__c</fullName>
        <description>The phone number provide is not valid.</description>
        <inlineHelpText>The phone number provide is not valid.</inlineHelpText>
        <label>Invalid Phone Number?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <label>SMS Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_First_Name__c</columns>
        <columns>Client_Last_Name__c</columns>
        <columns>Client_Phone_Number__c</columns>
        <columns>Client_Response__c</columns>
        <columns>Response_Date_Time__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Trackings</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default record type</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>